fixed instructions z-index

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -225,7 +225,7 @@ code
     width : 720px;
     margin-left : -360px;
     background-color : #fff;
-    z-index : 10000;
+    z-index : 10000000000000;
     padding : 10px;
     border : 2px solid #000;
     overflow : auto;
